# inferroute-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: RELEASING.md  cowork.md
inferroute_cli/: __init__.py  __main__.py  add.py  choose.py  config.py  cowork.py  data.py  gate.py  help.py  integrate.py  launch.py  login.py  main.py  models.py  remove.py  resume.py  setup.py  status.py
inferroute_local/: SCRUBBER.md  config.py  proxy.py  recorder.py  scrubber.py  scrubber_cli.py  server.py
tests/: test_launch.py  test_recorder_cost.py  test_resume.py  test_visibility.py
