[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferroute"
version = "0.1.0"
description = "Launch Claude Code through inferroute — typed less, routed smarter"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Henry Declety", email = "henry@inferroute.ai" }]
keywords = ["claude", "claude-code", "llm", "ai", "router", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]
dependencies = [
    "textual>=0.78,<2.0",
    "httpx>=0.27,<1.0",
]

[project.scripts]
ir = "inferroute_cli.main:main"

[project.urls]
Homepage = "https://inferroute.ai"
Source = "https://github.com/henrydeclety/inferroute-cli"

[tool.hatch.build.targets.wheel]
packages = ["inferroute_cli"]
