[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferroute"
version = "0.3.9"
description = "Launch Claude Code through inferroute — typed less, routed smarter"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Henry Declety", email = "henry@inferroute.ai" }]
keywords = ["claude", "claude-code", "llm", "ai", "router", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]
dependencies = [
    "textual>=0.78,<2.0",
    "httpx>=0.27,<1.0",
]

# Optional on-device recorder. Adds a local HTTP daemon that intercepts CC
# requests on localhost:5005, records the user's per-session model choice and
# how the turn went (privately, on-device), then forwards to api.inferroute.ai.
# There is NO classifier and NO routing — it's a pure pass-through recorder.
# Without this extra, `ir` stays a tiny launcher that points CC at
# api.inferroute.ai (the original "ir" experience).
#
# Installed by `ir add recording`.
# See shared-docs/inferroute/local-decision-recorder-spec.md.
[project.optional-dependencies]
local = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "click>=8.1",
]

[project.scripts]
ir = "inferroute_cli.main:main"
# Internal entry point used by the systemd user unit installed via
# `ir add recording`. Not surfaced in `ir help`; power users and
# debugging only.
inferroute-daemon = "inferroute_local.cli:main"
# Local, deterministic secret scrubber (stdlib-only; never uses the network).
# Sanitizes logs/session data BEFORE anything is synced to the cloud, and can
# rehydrate cloud results locally. See inferroute_local/SCRUBBER.md.
inferroute-scrub = "inferroute_local.scrubber_cli:main"

[project.urls]
Homepage = "https://inferroute.ai"
Source = "https://github.com/InferRoute/inferroute"
Issues = "https://github.com/InferRoute/inferroute/issues"

[tool.hatch.build.targets.wheel]
packages = ["inferroute_cli", "inferroute_local"]
